[package]
name = "calculator"
version = "0.14.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
build = "build.rs" # <-- We added this and everything after!
workspace = "../.."

[build-dependencies.lalrpop]
version = "0.14.0"
path = "../../lalrpop"

[dependencies]
lazy_static = "1.0.0"
regex = "0.2.1"

[dependencies.lalrpop-util]
version = "0.14.0"
path = "../../lalrpop-util"
